test position element 3

--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,8 @@ body {
     width: 50px; /* Kích thước mẫu, bạn có thể điều chỉnh */
     height: auto; /* Giữ tỷ lệ ảnh */
     object-fit: cover; /* Đảm bảo ảnh không bị méo */
-    top: 50vw; /* Khoảng cách từ đỉnh (tính bằng pixel, %, hoặc vw/vh) */
-    left: 50px;
+    top: 155vw; /* Khoảng cách từ đỉnh (tính bằng pixel, %, hoặc vw/vh) */
+    left: 7vw;
 
 }
 
