--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,12 @@
 }
 
 body {
+
     font-family: 'PlusJakartaSans', sans-serif;
     margin: 0;
     min-height: 100vh; /* Đảm bảo chiều cao tối thiểu, cho phép cuộn */
     background-image: url('./element/bc.jpg'); /* Thay bằng đường dẫn ảnh của bạn */
-    background-size: contain; /* Giữ tỷ lệ ảnh, scale theo chiều rộng viewport */
+    background-size: cover; /* Giữ tỷ lệ ảnh, scale theo chiều rộng viewport */
     background-position: top center;
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -53,48 +54,48 @@ h2 {
 
 /* Điều chỉnh cho từng ảnh, làm responsive và định vị độc lập */
 .floating-element.event-item {
-    width:68%;
+    width:80%;
     height: auto;
     object-fit: cover;
     position: absolute;
-    transition: transform 0.3sease;
+    transition: transform 0.3s ease;
 }
 
 /* Định vị từng phần tử riêng biệt (bạn có thể điều chỉnh các giá trị top, left) */
 .event-0 {
     /* width: 80%; */
-    top: 50%;
-    left: 23%;
+    top: 49.9%;
+    left: 17.8%;
     transform: translate(0, 0);
 }
 
 .event-1 {
     top: 56%; /* Ví dụ vị trí cho phần tử 2 */
-    left: 18%;
+    left: 12.8%;
     transform: translate(0, 0);
 }
 
 .event-2 {
     top: 62%;
-    left: 18%;
-    transform: translate(0, 0);
-}
-
-.event-3 {
-    top: 69%;
     left: 12%;
     transform: translate(0, 0);
 }
 
+.event-3 {
+    top: 68.5%;
+    left: 5%;
+    transform: translate(0, 0);
+}
+
 .event-4 {
-    top: 75%;
-    left: 18%;
+    top: 75.3%;
+    left: 11.8%;
     transform: translate(0, 0);
 }
 
 .event-5 {
-    top: 84%;
-    left: 15%;
+    top: 83.5%;
+    left: 8.6%;
     transform: translate(0, 0);
 }
 
@@ -107,7 +108,7 @@ h2 {
 #moving-element {
     width: 100px; /* Điều chỉnh kích thước theo ý muốn */
     height: 100px; /* Điều chỉnh kích thước theo ý muốn */
-    background-image: url('./element/your-image.png'); /* Thay bằng đường dẫn ảnh của bạn */
+    background-image: url('./element/GRASS.png'); /* Thay bằng đường dẫn ảnh của bạn */
     background-size: cover; /* Đảm bảo ảnh phủ kín phần tử */
     background-position: center;
     position: absolute;
@@ -214,7 +215,7 @@ h2 {
 
 /* Phần tử placeholder với chiều cao scale theo ảnh */
 .scroll-placeholder {
-    width: 100%; /* Chiều rộng bằng chiều rộng viewport */
+    width: 100%; /* Chiều rộng bằng chiều rộng viewport */;
     opacity: 0; /* Ẩn phần tử nhưng vẫn giữ chiều cao */
     pointer-events: none; /* Ngăn chặn tương tác với phần tử */
 }
