--- a/styles.css
+++ b/styles.css
@@ -124,14 +124,14 @@ h2 {
 
 /* Media queries để responsive trên các kích thước màn hình */
 #moving-element {
-    width: 100px; /* Điều chỉnh kích thước theo ý muốn */
-    height: 100px; /* Điều chỉnh kích thước theo ý muốn */
+    width: 25px; /* Điều chỉnh kích thước theo ý muốn */
+    height: 25px; /* Điều chỉnh kích thước theo ý muốn */
     background-image: url('./element/Layer\ 10.png'); /* Thay bằng đường dẫn ảnh của bạn */
     background-size: cover; /* Đảm bảo ảnh phủ kín phần tử */
     background-position: center;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 52%;
+    left: 49%;
     transition: transform 1s ease-in-out;
 }
 
